styles.css
/*
  ***
  This is the styles.css file that helps style my personal website. Most styling
  is done using Bootstrap, but these are used on top of that.
  ***
*/

.masthead {
  height: 80vh;
  min-height: 500px;
  background-image: url('assets/rainier.jpg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

body {
  font-family: 'Lato', sans-serif;
}

a {
  text-decoration: none;
}

nav a {
  white-space: nowrap;
}

.main-img {
  border: 5px solid grey;
  border-radius: 50%;
}

.purple {
  color: #4b2e83;
  border-color: #4b2e83;
}

.gold {
  color: #b7a57a;
  border-color: #b7a57a;
}

.bg-beige {
  background-color: #f2efe0;
}

h3 {
  font-size: 20px;
  padding-top: 4px;
}

#courses-skills h3, #contact-me h3 {
  font-size: 24px;
}

h4 {
  font-size: 18px;
  padding-top: 8px;
}

#courses-skills li {
  padding: 3px;
}

#courses-skills ul {
  padding-bottom: 20px;
}


#courses-skills li:hover {
  background-color: #f5f5f5;
}

.skills-list {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(7, 1fr);
  grid-auto-flow: column;
}

.stars {
  position: absolute;
  right: 10px;
}

.stars img {
  height: 18px;
  width: auto;
}

.social-media {
  width: 30px;
}

.contact-img {
  width: 35px;
}

.social-media, .contact-img {
  border-radius: 15%;
  height: auto;
}

.social-media:hover, .contact:hover {
  filter: brightness(90%);
}

.card-img-top {
  height: 225px;
  width: 100%;
  display: block;
}

.card-img-top:hover {
  opacity: 0.7;
}

footer {
  background-color: #434242;
}

footer a {
  color: inherit;
  text-decoration: underline;
}

@media (max-width: 991.98px) {
  .top-buffer {
    margin-top: 50px;
  }
}

